--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,9 +1,14 @@
 .banner{
 
+   
+
+   display: flex;
+    flex-direction: column;
     text-align: center;
     background:var(--azul-degrade);
-    padding: 2.5em 0.5em;
+    padding: 40px 20px;
 
+   
 }
 
 .banner_pesquisa{ /*tag input*/
@@ -13,14 +18,15 @@
     border-radius: 24px;
     padding: 1em;
     width: 100%;
-    
+    margin: 10px;
 }
 
 .banner_titulo{
-
-font-size: 18px;
-color: var(--branco);
-font-weight: 400;
+    
+    font-size: 18px;
+    color: var(--branco);
+    font-weight: 700;
+    margin: 10px;
 
 }
 
@@ -28,6 +34,7 @@ font-weight: 400;
 
     font-family: var(--fonte-principal);
     color: var(--branco);
+    margin: 10px;
     
     }
 
@@ -41,6 +48,32 @@ font-weight: 400;
     background: url("../assets/Pesquisa.png");
     background-repeat: no-repeat;
     background-position: 1em;
-    
 }
+
+@media (min-width: 600px){
+    
+    .banner_responsivo{
+        
+        margin: 30px 100px;
+    }
+}
+
+@media (min-width: 750px){
+    
+    .banner_responsivo{
+        
+        margin: 50px 200px;
+    }
+}
+
+@media (min-width: 1000px){
+    
+    .banner_responsivo{
+        
+        margin: 50px 300px;
+    }
+}
+
+
+
 
